# mlops

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  pyproject.toml
.dvc/: config
configs/: config.py  config.yaml
mlops/: commands.py  infer.py  train.py
mlops/common/: data_prep.py  runner.py  train_model.py
mlops/src/: data_prep.py  runner.py  train_model.py
