[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "effyOsvin@github.com"
authors = ["effyOsvin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
torch = "^2.0,!=2.0.1"
torchvision = "^0.15.1,!=0.15.2"
pandas = "^2.1.1"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"
tqdm = "^4.66.1"
runner = "^1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
isort = "^5.12.0"
black = "^23.9.1"
flake8 = "^6.1.0"
fire = "^0.5.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
